--- a/.cproject
+++ b/.cproject
@@ -231,7 +231,7 @@
 								<option id="com.crt.advproject.link.gcc.hdrlib.830734817" name="Library" superClass="com.crt.advproject.link.gcc.hdrlib" value="com.crt.advproject.gcc.link.hdrlib.codered.nohost_nf" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.gcc.nanofloat.98498065" name="Enable printf float " superClass="com.crt.advproject.link.gcc.nanofloat"/>
 								<option id="com.crt.advproject.link.gcc.nanofloat.scanf.1943204590" name="Enable scanf float " superClass="com.crt.advproject.link.gcc.nanofloat.scanf"/>
-								<option id="com.crt.advproject.link.script.66936363" name="Linker script" superClass="com.crt.advproject.link.script" value="&quot;FRDM-K64F_ContextSwitch-3_Debug.ld&quot;" valueType="string"/>
+								<option id="com.crt.advproject.link.script.66936363" name="Linker script" superClass="com.crt.advproject.link.script" value="frdmk64f_demo_apps_ContextSwitch-3_Debug.ld" valueType="string"/>
 								<option id="com.crt.advproject.link.scriptdir.1392294035" name="Script path" superClass="com.crt.advproject.link.scriptdir"/>
 								<option defaultValue="com.crt.advproject.heapAndStack.mcuXpressoStyle" id="com.crt.advproject.link.memory.heapAndStack.style.1736081064" name="Heap and Stack placement" superClass="com.crt.advproject.link.memory.heapAndStack.style" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.gcc.multicore.slave.2008649821" name="Multicore configuration" superClass="com.crt.advproject.link.gcc.multicore.slave"/>
@@ -502,7 +502,7 @@
 								<option id="com.crt.advproject.link.gcc.hdrlib.327746239" name="Library" superClass="com.crt.advproject.link.gcc.hdrlib" value="com.crt.advproject.gcc.link.hdrlib.codered.nohost_nf" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.gcc.nanofloat.958518848" name="Enable printf float " superClass="com.crt.advproject.link.gcc.nanofloat"/>
 								<option id="com.crt.advproject.link.gcc.nanofloat.scanf.942199169" name="Enable scanf float " superClass="com.crt.advproject.link.gcc.nanofloat.scanf"/>
-								<option id="com.crt.advproject.link.script.1554132812" name="Linker script" superClass="com.crt.advproject.link.script" value="&quot;FRDM-K64F_ContextSwitch-3_Release.ld&quot;" valueType="string"/>
+								<option id="com.crt.advproject.link.script.1554132812" name="Linker script" superClass="com.crt.advproject.link.script" value="frdmk64f_demo_apps_ContextSwitch-3_Release.ld" valueType="string"/>
 								<option id="com.crt.advproject.link.scriptdir.1769831877" name="Script path" superClass="com.crt.advproject.link.scriptdir"/>
 								<option defaultValue="com.crt.advproject.heapAndStack.mcuXpressoStyle" id="com.crt.advproject.link.memory.heapAndStack.style.83897777" name="Heap and Stack placement" superClass="com.crt.advproject.link.memory.heapAndStack.style" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.gcc.multicore.slave.263955269" name="Multicore configuration" superClass="com.crt.advproject.link.gcc.multicore.slave"/>
@@ -592,7 +592,7 @@
 	</storageModule>
 	<storageModule moduleId="com.nxp.mcuxpresso.core.datamodels">
 		<sdkName>SDK_2.x_FRDM-K64F</sdkName>
-		<sdkVersion>2.8.2</sdkVersion>
+		<sdkVersion>2.11.0</sdkVersion>
 		<sdkComponents>middleware.baremetal.MK64F12;platform.drivers.clock.MK64F12;platform.Include_common.MK64F12;platform.Include_core_cm4.MK64F12;platform.devices.MK64F12_CMSIS.MK64F12;platform.drivers.common.MK64F12;platform.drivers.flash.MK64F12;platform.drivers.gpio.MK64F12;platform.drivers.port.MK64F12;platform.drivers.smc.MK64F12;platform.drivers.uart.MK64F12;platform.utilities.debug_console.MK64F12;platform.devices.MK64F12_startup.MK64F12;project_template.frdmk64f.MK64F12;</sdkComponents>
 		<boardId>frdmk64f</boardId>
 		<package>MK64FN1M0VLL12</package>
